# kiss3d_force_directed_graph

./: Cargo.toml  README.md
dot_files/annthyroid/: depth_10.dot  depth_3.dot  depth_6.dot
dot_files/arrhythmia/: cluster_cardinality_optimal_0.dot  cluster_cardinality_optimal_1.dot  cluster_cardinality_optimal_10.dot  cluster_cardinality_optimal_11.dot  cluster_cardinality_optimal_20.dot  cluster_cardinality_optimal_21.dot  cluster_cardinality_optimal_30.dot  cluster_cardinality_optimal_31.dot  component_cardinality_optimal_12.dot  component_cardinality_optimal_13.dot  component_cardinality_optimal_2.dot  component_cardinality_optimal_22.dot  component_cardinality_optimal_23.dot  component_cardinality_optimal_3.dot  component_cardinality_optimal_32.dot  component_cardinality_optimal_33.dot  graph_neighborhood_optimal_14.dot  graph_neighborhood_optimal_15.dot  graph_neighborhood_optimal_24.dot  graph_neighborhood_optimal_25.dot  graph_neighborhood_optimal_34.dot  graph_neighborhood_optimal_35.dot  graph_neighborhood_optimal_4.dot  graph_neighborhood_optimal_5.dot  parent_cardinality_optimal_16.dot  parent_cardinality_optimal_17.dot  parent_cardinality_optimal_26.dot  parent_cardinality_optimal_27.dot  parent_cardinality_optimal_36.dot  parent_cardinality_optimal_37.dot  parent_cardinality_optimal_6.dot  parent_cardinality_optimal_7.dot  stationary_probabilities_optimal_18.dot  stationary_probabilities_optimal_19.dot  stationary_probabilities_optimal_28.dot  (+5 more)
dot_files/breastw/: depth_3.dot  (+14 more)
src/: common_funcs.rs  dot_reader.rs  graph_maker.rs  main.rs  node.rs  spring.rs
(+284 files in other folders)
