[package]
name = "kiss3d_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.29"
nalgebra     = "0.26"
rand = "0.7.3"
ncollide3d = { git = "https://github.com/dimforge/ncollide" }
ncollide2d = { git = "https://github.com/dimforge/ncollide" }
nannou = "0.14"
dynamic = "0.2"
force_graph = "0.1.1"
serde_json = "1.0.45"
petgraph = "0.5.1"
petgraph-evcxr = "0.2.0"

